# chess

./: .gitignore  .pre-commit-config.yaml  README.md  chess.py  pyproject.toml
game_pgns/: game2025_03_09_15_14_41.pgn
src/chess/: __main__.py  hash.py  main.py  parser.py  piece.py  uci.py  util.py
tests/: pawn_test.py
