[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chess"
description = "chess"
keywords = ["chess"]
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "pygame",
]

[project.optional-dependencies]
test = [
]

[tool.setuptools.packages.find]
# Note: set this if we are using src layout.
where = ["src"]

[project.scripts]
chess = "chess.main:main"
